--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
               <path d="M18.5705 18.0723L22.6667 22.1685" stroke="#3A3C44" stroke-width="1.75" stroke-linecap="round" stroke-linejoin="round"/>
             </svg>
           </li>
-          <li class="ms-3">
+          <li class="ms-3 position-relative">
+            <span class="indicator position-absolute"></span>
             <svg width="29" height="28" viewBox="0 0 29 28" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M11.9206 5.54166C11.4373 5.54166 11.0456 5.93341 11.0456 6.41666C11.0456 6.89991 11.4373 7.29166 11.9206 7.29166V5.54166ZM15.9129 7.29166C16.3962 7.29166 16.7879 6.89991 16.7879 6.41666C16.7879 5.93341 16.3962 5.54166 15.9129 5.54166V7.29166ZM11.5834 20.8087C12.0666 20.8087 12.4584 20.4169 12.4584 19.9337C12.4584 19.4504 12.0666 19.0587 11.5834 19.0587V20.8087ZM9.18705 19.9337L9.17773 20.8087H9.18705V19.9337ZM7.76955 19.117L8.5218 18.6701C8.51934 18.6659 8.51683 18.6618 8.5143 18.6577L7.76955 19.117ZM7.92589 14.287L7.05089 14.28V14.287H7.92589ZM13.9167 8.38484L13.9107 9.2599L13.9228 9.25982L13.9167 8.38484ZM19.9076 14.2882H20.7826L20.7825 14.2813L19.9076 14.2882ZM20.0639 19.1158L19.32 18.6551C19.3172 18.6597 19.3144 18.6643 19.3116 18.6689L20.0639 19.1158ZM18.6464 19.9325V20.8076L18.6557 20.8075L18.6464 19.9325ZM16.2501 19.0575C15.7668 19.0575 15.3751 19.4493 15.3751 19.9325C15.3751 20.4158 15.7668 20.8075 16.2501 20.8075V19.0575ZM12.4584 19.9324C12.4584 19.4492 12.0667 19.0574 11.5834 19.0574C11.1002 19.0574 10.7084 19.4492 10.7084 19.9324H12.4584ZM11.5834 20.4959H10.7084C10.7084 20.5011 10.7085 20.5062 10.7085 20.5114L11.5834 20.4959ZM13.9167 22.7499L13.9316 21.8751C13.9217 21.8749 13.9118 21.8749 13.9019 21.8751L13.9167 22.7499ZM16.2501 20.4971L17.1249 20.513C17.125 20.5077 17.1251 20.5024 17.1251 20.4971H16.2501ZM17.1251 19.9336C17.1251 19.4504 16.7333 19.0586 16.2501 19.0586C15.7668 19.0586 15.3751 19.4504 15.3751 19.9336H17.1251ZM11.5834 19.0587C11.1002 19.0587 10.7084 19.4505 10.7084 19.9337C10.7084 20.417 11.1002 20.8087 11.5834 20.8087V19.0587ZM16.2501 20.8087C16.7333 20.8087 17.1251 20.417 17.1251 19.9337C17.1251 19.4505 16.7333 19.0587 16.2501 19.0587V20.8087ZM11.9206 7.29166H15.9129V5.54166H11.9206V7.29166ZM11.5834 19.0587H9.18705V20.8087H11.5834V19.0587ZM9.19638 19.0587C8.91911 19.0558 8.66343 18.9085 8.5218 18.6701L7.0173 19.5639C7.4709 20.3274 8.28972 20.7992 9.17773 20.8086L9.19638 19.0587ZM8.5143 18.6577C8.35469 18.3989 8.33114 18.0491 8.44984 17.4204C8.5154 17.0732 8.57852 16.8404 8.6621 16.4315C8.73416 16.0789 8.80089 15.6784 8.80089 15.267H7.05089C7.05089 15.5008 7.01218 15.7648 6.94755 16.081C6.89445 16.3409 6.78964 16.781 6.73022 17.0957C6.59897 17.7909 6.49725 18.721 7.02481 19.5763L8.5143 18.6577ZM8.80089 15.267V14.287H7.05089V15.267H8.80089ZM8.80086 14.294C8.82331 11.4935 11.1101 9.24051 13.9107 9.25982L13.9228 7.50986C10.1565 7.48389 7.0811 10.5138 7.05091 14.28L8.80086 14.294ZM13.9228 9.25982C16.7237 9.24051 19.0107 11.4941 19.0326 14.295L20.7825 14.2813C20.7531 10.5146 17.6775 7.48389 13.9107 7.50986L13.9228 9.25982ZM19.0326 14.2882V15.2658H20.7826V14.2882H19.0326ZM19.0326 15.2658C19.0326 15.6781 19.0992 16.0793 19.1713 16.4326C19.2551 16.8433 19.3178 17.0743 19.3836 17.4227C19.5025 18.0522 19.4783 18.3995 19.32 18.6551L20.8078 19.5766C21.3366 18.7227 21.2343 17.7925 21.1032 17.0981C21.044 16.7846 20.9388 16.342 20.886 16.0828C20.8213 15.7661 20.7826 15.5011 20.7826 15.2658H19.0326ZM19.3116 18.6689C19.17 18.9073 18.9143 19.0546 18.6371 19.0576L18.6557 20.8075C19.5437 20.798 20.3625 20.3262 20.8161 19.5628L19.3116 18.6689ZM18.6464 19.0575H16.2501V20.8075H18.6464V19.0575ZM10.7084 19.9324V20.4959H12.4584V19.9324H10.7084ZM10.7085 20.5114C10.7394 22.2609 12.182 23.6544 13.9316 23.6248L13.9019 21.8751C13.1183 21.8883 12.4721 21.2641 12.4583 20.4805L10.7085 20.5114ZM13.9019 23.6248C15.6508 23.6545 17.0932 22.2619 17.1249 20.513L15.3752 20.4812C15.361 21.2646 14.7149 21.8883 13.9316 21.8751L13.9019 23.6248ZM17.1251 20.4971V19.9336H15.3751V20.4971H17.1251ZM11.5834 20.8087H16.2501V19.0587H11.5834V20.8087Z" fill="#3A3C44"/>
             </svg>
@@ -98,13 +99,13 @@
         <section class="tabs">
           <ul class="nav nav-tabs p-1" id="tab" role="tablist">
             <li class="nav-item" role="presentation">
-              <button class="active nav-link font-medium p-1 w-100 d-flex align-items-center justify-content-center" id="community-tab" data-bs-toggle="tab" data-bs-target="#community-tab-pane" type="button" role="tab" aria-controls="community-tab-pane" aria-selected="true">
+              <button class="active nav-link p-1 w-100 d-flex align-items-center justify-content-center" id="community-tab" data-bs-toggle="tab" data-bs-target="#community-tab-pane" type="button" role="tab" aria-controls="community-tab-pane" aria-selected="true">
                 <span class="nav-active-indicator"></span>
                 Community
               </button>
             </li>
             <li class="nav-item " role="presentation">
-              <button class="nav-link font-medium w-100 d-flex align-items-center justify-content-center p-1" id="dashboard-tab" data-bs-toggle="tab" data-bs-target="#dashboard-tab-pane" type="button" role="tab" aria-controls="dashboard-tab-pane" aria-selected="false">
+              <button class="nav-link w-100 d-flex align-items-center justify-content-center p-1" id="dashboard-tab" data-bs-toggle="tab" data-bs-target="#dashboard-tab-pane" type="button" role="tab" aria-controls="dashboard-tab-pane" aria-selected="false">
                 <span class="nav-active-indicator"></span>
                 Dashboard
               </button>
@@ -112,10 +113,149 @@
           </ul>
           <div class="tab-content pt-4" id="tabContent">
             <div class="tab-pane fade show active" id="community-tab-pane" role="tabpanel" aria-labelledby="home-tab" tabindex="0">
-              Community
+              <h3 class="text-sm font-medium m-0">Recent activity</h3>
+              <ul class="activity-list list-unstyled">
+                <li class="activity activity-list-item px-2 py-3 mb-3">
+                  <div class="activity-type d-flex align-items-center justify-content-between">
+                    <span class="badge badge-announcement p-1 pe-2">
+                      <svg width="17" height="16" viewBox="0 0 17 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="me-1">
+                        <rect x="0.5" width="16" height="16" rx="8" fill="white"/>
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M5.53686 10.4822C4.95313 10.4709 4.48904 9.98858 4.5002 9.40485V7.25018C4.48904 6.66645 4.95313 6.18415 5.53686 6.17285H9.3102C9.54936 6.17227 9.78058 6.087 9.96286 5.93218L11.1835 4.90351C11.4977 4.64494 11.9343 4.59475 12.2989 4.77532C12.6635 4.9559 12.8882 5.33361 12.8729 5.74018V10.9148C12.8882 11.3214 12.6635 11.6991 12.2989 11.8797C11.9343 12.0603 11.4977 12.0101 11.1835 11.7515L9.96286 10.7228C9.78058 10.568 9.54936 10.4828 9.3102 10.4822H5.53686Z" stroke="#3A3C44" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M9.24553 8.32812V10.4828" stroke="#3A3C44" stroke-linecap="round"/>
+                      </svg>
+                      Announcement
+                    </span>
+                    <span class="text-xs text-secondary">3 mins</span>
+                  </div>
+
+                  <div class="activity-user d-flex align-items-center pt-2">
+                    <figure class="mb-0">
+                      <img src="./src/images/activity-avatar.png" alt="Avatar" style="width: 40px; height: auto;">
+                    </figure>
+                    <div class="d-flex flex-column ms-2">
+                      <h3 class="font-medium text-sm m-0">John Green</h3>
+                      <p class="m-0 text-xs text-secondary">Registered Nurse - Minneapolis, MN</p>
+                    </div>
+                  </div>
+
+                  <ul class="activity-tags list-unstyled d-flex flex-wrap ps-0 pt-2">
+                    <li>
+                      <span class="badge badge-points badge-lg p-2">
+                        <figure class="mb-0 me-2">
+                          <img src="./src/images/logo-white.svg" alt="Logo">
+                        </figure>
+                        +5
+                      </span>
+                    </li>
+                    <li>
+                      <span class="badge badge-mention badge-lg p-2">
+                        <img src="./src/images/avatar.png" alt="Avatar" style="width: 16px; height: auto;" class="me-2">
+                        @Jane doe
+                      </span>
+                    </li>
+                  </ul>
+
+                  <p class="activity-content mb-3 pt-1">
+                    Cheers to everyone who participated in our poll Your feedback is the heartbeat
+                    of our community, and we're thrilled to have
+                    such active members.
+                    <span class="badge badge-hashtag badge-lg p-2">
+                      #Feedbackisfuel
+                    </span>
+                  </p>
+
+                  <div class="activity-actions d-flex align-items-center justify-content-between px-2">
+                    <div class="activity-likes d-flex align-items-center">
+                      <svg width="21" height="20" viewBox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M10.4996 18.3214L6.60225 14.3214L2.73559 10.3214C0.64368 8.11077 0.64368 4.65079 2.73559 2.44011C3.75991 1.45567 5.1473 0.941218 6.56582 1.01986C7.98433 1.09849 9.30636 1.76314 10.2156 2.85478L10.4996 3.13345L10.7809 2.84278C11.6901 1.75114 13.0122 1.08649 14.4307 1.00786C15.8492 0.929218 17.2366 1.44367 18.2609 2.42811C20.3528 4.63879 20.3528 8.09877 18.2609 10.3094L14.3943 14.3094L10.4996 18.3214Z" stroke="#3A3C44" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                      </svg>
+                      <span class="ms-2">
+                      4 likes
+                      </span>
+                    </div>
+                    <ul class="list-unstyled d-flex align-items-center p-0 m-0">
+                      <li class="me-4">
+                        <svg width="21" height="22" viewBox="0 0 21 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                          <path d="M6.5 13.6667C6.74175 14.2964 7.13788 14.8553 7.652 15.292C9.28703 16.6644 11.6665 16.6818 13.3213 15.3333C13.8426 14.9044 14.2478 14.3515 14.5 13.7253" stroke="#3A3C44" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                          <path fill-rule="evenodd" clip-rule="evenodd" d="M19.8333 11C19.8333 16.1547 15.6547 20.3333 10.5 20.3333C5.34534 20.3333 1.16666 16.1547 1.16666 11C1.16666 5.84535 5.34534 1.66667 10.5 1.66667C12.9754 1.66667 15.3493 2.65 17.0997 4.40034C18.85 6.15068 19.8333 8.52465 19.8333 11Z" stroke="#3A3C44" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                          <path d="M6.5 9.66668V8.33334" stroke="#3A3C44" stroke-width="1.5" stroke-linecap="round"/>
+                          <path d="M14.5 9.66668V8.33334" stroke="#3A3C44" stroke-width="1.5" stroke-linecap="round"/>
+                        </svg>
+                      </li>
+                      <li>
+                        <svg width="21" height="22" viewBox="0 0 21 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                          <path fill-rule="evenodd" clip-rule="evenodd" d="M6.0508 1.66667H14.9508C17.6675 1.68721 19.8534 3.90592 19.8335 6.62267V12.64C19.843 13.9449 19.3339 15.2001 18.4179 16.1296C17.502 17.059 16.2543 17.5865 14.9495 17.596H6.0508L1.1668 20.3333V6.62267C1.15721 5.3178 1.6664 4.06256 2.58234 3.13312C3.49827 2.20369 4.74592 1.67618 6.0508 1.66667Z" stroke="#3A3C44" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                      </li>
+                    </ul>
+                  </div>
+                </li>
+
+                <li class="activity activity-list-item px-2 py-3 mb-3">
+                  <div class="activity-type d-flex align-items-center justify-content-between">
+                    <span class="badge badge-bravo p-1 pe-2">
+                      <svg width="17" height="16" viewBox="0 0 17 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="me-1">
+                        <path d="M0.5 8C0.5 3.58172 4.08172 0 8.5 0C12.9183 0 16.5 3.58172 16.5 8C16.5 12.4183 12.9183 16 8.5 16C4.08172 16 0.5 12.4183 0.5 8Z" fill="white"/>
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M7.83464 10.6673C7.72589 9.24203 6.59326 8.1094 5.16797 8.00065C6.59326 7.8919 7.72589 6.75927 7.83464 5.33398C7.94339 6.75927 9.07602 7.8919 10.5013 8.00065C9.07602 8.1094 7.94339 9.24203 7.83464 10.6673V10.6673Z" stroke="#3A3C44" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M11.1683 12.6667C11.1102 12.2431 10.8509 11.4357 9.83496 11.3333C10.8509 11.231 11.1102 10.4236 11.1683 10C11.2706 11.016 12.078 11.2752 12.5016 11.3333C12.078 11.3915 11.2706 11.6507 11.1683 12.6667Z" fill="#707070"/>
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M11.1683 12.6667C11.1138 11.9541 10.5475 11.3878 9.83496 11.3333C10.5475 11.2788 11.1138 10.7126 11.1683 10C11.2228 10.7126 11.789 11.2788 12.5016 11.3333C11.789 11.3878 11.2228 11.9541 11.1683 12.6667Z" stroke="#3A3C44" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M11.1683 3.33398C11.2706 4.34994 12.078 4.6092 12.5016 4.66732C12.078 4.72544 11.2706 4.98469 11.1683 6.00065C11.1102 5.57705 10.8509 4.76964 9.83496 4.66732C10.8509 4.565 11.1102 3.75758 11.1683 3.33398Z" fill="#707070"/>
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M11.1683 3.33398C11.1138 4.04656 10.5475 4.61281 9.83496 4.66732C10.5475 4.72183 11.1138 5.28807 11.1683 6.00065C11.2228 5.28807 11.789 4.72183 12.5016 4.66732C11.789 4.61281 11.2228 4.04656 11.1683 3.33398Z" stroke="#3A3C44" stroke-linecap="round" stroke-linejoin="round"/>
+                      </svg>
+                      BravoBoard
+                    </span>
+                    <span class="text-xs text-secondary">12 mins</span>
+                  </div>
+
+                  <div class="activity-user d-flex align-items-center pt-2">
+                    <figure class="mb-0">
+                      <img src="./src/images/activity-avatar-1.png" alt="Avatar" style="width: 40px; height: auto;">
+                    </figure>
+                    <div class="d-flex flex-column ms-2">
+                      <h3 class="font-medium text-sm m-0">Imogen Misso</h3>
+                      <p class="m-0 text-xs text-secondary">Registered Nurse - Minneapolis, MN</p>
+                    </div>
+                  </div>
+
+                  <p class="activity-content mb-3 pt-1">
+                    <span class="badge badge-mention badge-lg p-2">
+                      <img src="./src/images/avatar.png" alt="Avatar" style="width: 16px; height: auto;" class="me-2">
+                      @Jane doe
+                    </span>
+                    Cheers to everyone who participated in our poll Your feedback is the heartbeat
+                    of our community, and we're thrilled to have
+                    such active members.
+                  </p>
+
+                  <div class="activity-actions d-flex align-items-center justify-content-between px-2">
+                    <div class="activity-likes d-flex align-items-center">
+                      <svg width="21" height="20" viewBox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M10.4996 18.3214L6.60225 14.3214L2.73559 10.3214C0.64368 8.11077 0.64368 4.65079 2.73559 2.44011C3.75991 1.45567 5.1473 0.941218 6.56582 1.01986C7.98433 1.09849 9.30636 1.76314 10.2156 2.85478L10.4996 3.13345L10.7809 2.84278C11.6901 1.75114 13.0122 1.08649 14.4307 1.00786C15.8492 0.929218 17.2366 1.44367 18.2609 2.42811C20.3528 4.63879 20.3528 8.09877 18.2609 10.3094L14.3943 14.3094L10.4996 18.3214Z" stroke="#3A3C44" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                      </svg>
+                      <span class="ms-2">
+                      4 likes
+                      </span>
+                    </div>
+                    <ul class="list-unstyled d-flex align-items-center p-0 m-0">
+                      <li class="me-4">
+                        <svg width="21" height="22" viewBox="0 0 21 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                          <path d="M6.5 13.6667C6.74175 14.2964 7.13788 14.8553 7.652 15.292C9.28703 16.6644 11.6665 16.6818 13.3213 15.3333C13.8426 14.9044 14.2478 14.3515 14.5 13.7253" stroke="#3A3C44" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                          <path fill-rule="evenodd" clip-rule="evenodd" d="M19.8333 11C19.8333 16.1547 15.6547 20.3333 10.5 20.3333C5.34534 20.3333 1.16666 16.1547 1.16666 11C1.16666 5.84535 5.34534 1.66667 10.5 1.66667C12.9754 1.66667 15.3493 2.65 17.0997 4.40034C18.85 6.15068 19.8333 8.52465 19.8333 11Z" stroke="#3A3C44" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                          <path d="M6.5 9.66668V8.33334" stroke="#3A3C44" stroke-width="1.5" stroke-linecap="round"/>
+                          <path d="M14.5 9.66668V8.33334" stroke="#3A3C44" stroke-width="1.5" stroke-linecap="round"/>
+                        </svg>
+                      </li>
+                      <li>
+                        <svg width="21" height="22" viewBox="0 0 21 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                          <path fill-rule="evenodd" clip-rule="evenodd" d="M6.0508 1.66667H14.9508C17.6675 1.68721 19.8534 3.90592 19.8335 6.62267V12.64C19.843 13.9449 19.3339 15.2001 18.4179 16.1296C17.502 17.059 16.2543 17.5865 14.9495 17.596H6.0508L1.1668 20.3333V6.62267C1.15721 5.3178 1.6664 4.06256 2.58234 3.13312C3.49827 2.20369 4.74592 1.67618 6.0508 1.66667Z" stroke="#3A3C44" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                      </li>
+                    </ul>
+                  </div>
+                </li>
+              </ul>
             </div>
             <div class="tab-pane fade" id="dashboard-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0">
-              Dashboard
             </div>
           </div>
         </section>
