--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app" class="position-relative mx-auto">
+    <div id="app" class="position-relative mx-auto pb-5">
 
       <!-- Header -->
       <header class="header position-fixed d-flex align-items-center justify-content-between px-3 z-1">
@@ -37,7 +37,7 @@
       </header>
 
       <!-- Actions -->
-      <section class="actions pb-5 pt-6">
+      <section class="actions pb-5 pt-6 animate">
         <div class="greetings d-flex align-items-center pt-4 px-2">
           <figure class="m-0">
             <img src="./src/images/avatar.png" alt="Avatar" style="width: 48px; height: auto;">
@@ -95,7 +95,7 @@
       </section>
 
       <!-- Main -->
-      <main class="main pt-3 py-4 px-2">
+      <main class="main pt-3 py-4 px-2 animate">
         <section class="tabs">
           <ul class="nav nav-tabs p-1" id="tab" role="tablist">
             <li class="nav-item" role="presentation">
