--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       </section>
 
       <!-- Main -->
-      <main class="main pt-3 py-4 px-2 animate">
+      <main class="main pt-3 py-4 px-2">
         <section class="tabs">
           <ul class="nav nav-tabs p-1" id="tab" role="tablist">
             <li class="nav-item" role="presentation">
